applications/activation/Deployment/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: the-incredible-hulk
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: hulk-app
  name: bruce-banner
  namespace: the-incredible-hulk
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: hulk-app
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: hulk-app
    spec:
      containers:
      - image: image-registry.openshift-image-registry.svc:5000/shared-images/buggy-nginx:latest
        imagePullPolicy: Always
        name: nginx-container
        ports:
          - containerPort: 8000
        resources:
          requests:
            memory: "20Gi"
          limits:
            memory: "20Gi"
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: default
      serviceAccountName: default
      terminationGracePeriodSeconds: 30

---
kind: Service
apiVersion: v1
metadata:
  name: hulk-svc
  namespace: the-incredible-hulk
spec:
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
  ipFamilyPolicy: SingleStack
  sessionAffinity: None
  selector:
    app: hulk-app

---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: hulk-app
  namespace: the-incredible-hulk
spec:
  to:
    kind: Service
    name: hulk-svc
  port:
    targetPort: 8000
